# aislides

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  Dockerfile  Dockerfile.render  IMPROVEMENT_ROADMAP.md  Makefile  ONBOARDING.md  PIPELINE_AUDIT_REPORT.md  QUALITY_REPORT.md  README.md  TEMPLATE_AUDIT.md  create-test-layouts.mjs  docker-compose.dev.yml  docker-compose.yml  ideas.md  nginx.conf  notes_export.md  notes_redesign.md  package.json  pnpm-lock.yaml  pyproject.toml  query-db.mjs  query-db2.mjs  query-slide6.mjs  render.yaml  test-card-grid.html  test-card-grid.mjs  test-card-grid2.mjs  test-card-visual.mjs  test-results.md  todo.md  viewer-test-notes.md  vite.config.ts
.husky/: pre-commit
.manus/db/: db-query-1770903498646.json  db-query-1770903825486.json  db-query-1770960205866.json  db-query-1770960209191.json  db-query-1770960224619.json  db-query-1770960232446.json  db-query-1770960254792.json  db-query-1770960429999.json  db-query-1770960433734.json  db-query-1770960449728.json  db-query-1770960466285.json  db-query-1770961818179.json  db-query-1770961822108.json  db-query-1770962047224.json  db-query-1770962052473.json  db-query-1770967631273.json  db-query-1770998288840.json  db-query-1771100980518.json  db-query-1771100985167.json  db-query-1771100990084.json  db-query-1771152231750.json  db-query-1771152236099.json  db-query-1771152240397.json  db-query-1771152244829.json  db-query-1771152341501.json  db-query-1771237777433.json  db-query-1771237782682.json  db-query-error-1770998277771.json  db-query-error-1771100971418.json
backend/: Dockerfile
backend/app/: config.py  database.py  main.py
client/: index.html
client/src/: App.tsx  index.css
configs/: config.yaml
data/: app.db
data/layouts/: corporate_layouts.md  creative_layouts.md  data_layouts.md  luxury_layouts.md  mckinsey_layouts.md  swiss_layouts.md  tech_layouts.md
data/presets/: consulting_classic.json  corporate_classic.json  dark_mode_code.json  data_visualization.json  elegant_premium.json  playful_creative.json  swiss_minimalist.json  tech_innovation.json
data/scoring/: scoring_rubric.json
deploy/: entrypoint.sh  nginx.render.conf
docs/: development_roadmap.md  engine_architecture_specification_v3_ru.md  product_requirements_document.md  readiness_map_v3.md  technical_specification.md
docs/adr/: ADR-001-engine-architecture.md  ADR-002-instructor-json-mode.md
docs/user_guide/: 01_introduction.md  02_getting_started.md  03_interface_overview.md  04_core_workflows.md  05_development.md
drizzle/: 0001_gifted_flatman.sql  0002_exotic_living_mummy.sql  0003_early_quasar.sql  0003_narrow_rhino.sql  0004_lethal_garia.sql  0004_lonely_jetstream.sql  0005_dusty_franklin_richards.sql  0006_famous_ares.sql  0007_jazzy_mysterio.sql  0008_early_stature.sql  0009_daffy_wiccan.sql  0010_dusty_fenris.sql  schema.ts
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  0009_snapshot.json  0010_snapshot.json  _journal.json
engine/: __init__.py  api.py  base_node.py  event_bus.py  file_storage.py  registry.py  runtime.py
engine/nodes/: planner_node.py  validator_node.py
frontend/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
output/slides/: index.html  presentation.html  slide_01.html  slide_02.html  slide_03.html  slide_04.html  slide_05.html
postman/: collection.json  environment.json
schemas/: __init__.py  events.py  execution_plan.py  shared_store.py  tool_schemas.py
scripts/: cardgrid_fix_notes.md  cardgrid_v2_notes.md  generate-changelog.mjs  generate-postman.mjs  generate-readme.mjs  inspectCardGrid.mjs  inspectCardGrid.ts  inspectCardGrid2.ts  inspectSlides.mjs  metrics_analysis.json  pptx_issues.md  pptx_v2_notes.md  pptx_v3_notes.md  qualityTest.mjs  qualityTest2.mjs  quality_results.json  quality_results_r2.json  sandbox-up.sh  test-pipeline-results.json  test-pipeline.mjs  testCardGrid.ts  testPptxExport.mjs  visual-adaptive-test.mjs  visual-overflow-test.mjs  visual_notes.md
server/: analyticsDb.ts  analyticsExport.ts  analyticsRoutes.ts  annotations.test.ts  autoDensity.test.ts  autoSave.test.ts  backendProxy.ts  bugfix-viewer-title.test.ts  chat.test.ts  chatDb.ts  chatOrchestrator.designFeedback.test.ts  chatOrchestrator.modeSelection.test.ts  chatOrchestrator.slideBySlide.test.ts  chatOrchestrator.ts  chatRoutes.ts  comments.test.ts  design-critic-v2.test.ts  devtools.test.ts  errorAnalytics.test.ts  errorAnalyticsDb.ts  errorLogger.ts  features.test.ts  fileExtractor.ts  fileUpload.test.ts  inlineFieldInjector.test.ts  intentExtractor.requirementChange.test.ts  interactiveRoutes.test.ts  interactiveRoutes.ts  markdownInline.test.ts  openai-fallback.test.ts  parseOutlineFromFiles.test.ts  pdfExport.ts  pipeline-quality.test.ts  pptxExport.test.ts  pptxExport.ts  presentationDb.ts  presentationRetry.test.ts  presentationRoutes.ts  presentations.test.ts  qualityImprovements.test.ts  (+20 more)
server/_core/: imageGeneration.ts  index.ts  llm.ts  retry.ts
server/pipeline/: adaptiveSizing.ts  adaptiveTypography.test.ts  analysisAgent.ts  autoDensity.ts  composerMapping.test.ts  contentAnalyzer.test.ts  contentAnalyzer.ts  contentDensityValidator.ts  contentEvaluator.ts  dataVizAgent.test.ts  dataVizAgent.ts  designCriticAgent.test.ts  designCriticAgent.ts  factChecker.test.ts  factChecker.ts  fileExtractor.test.ts  fileExtractor.ts  finalReview.ts  generator.ts  imageGeneration.test.ts  imagePromptEngine.ts  inlineFieldInjector.ts  intentExtractor.test.ts  intentExtractor.ts  layout-info.md  layoutVoting.ts  manusLayouts.test.ts  markdownInline.ts  newLayouts.test.ts  phase1.test.ts  (+29 more)
shared/: themes.ts
tools/: s1_context_analyzer.py  s2_narrative_architect.py  s3_design_architect.py  s4_slide_generator.py  s5_quality_validator.py
(+138 files in other folders)
