[tool.poetry]
name = "ai-presentation-generator"
version = "0.1.0"
description = "AI-powered presentation generator with LLM-driven planning and execution engine"
authors = ["Stas"]
readme = "README.md"
packages = [
    { include = "engine" },
    { include = "tools" },
    { include = "schemas" },
    { include = "backend" },
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6"
instructor = "^1.5"
openai = "^1.12"
google-generativeai = "^0.8"
pyyaml = "^6.0"
python-dotenv = "^1.0"
fastapi = "^0.131.0"
uvicorn = {extras = ["standard"], version = "^0.41.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.46"}
alembic = "^1.18.4"
asyncpg = "^0.31.0"
aiosqlite = "^0.22.1"
python-multipart = "^0.0.22"
pydantic-settings = "^2.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-asyncio = "^0.23"
ruff = "^0.3"
black = "^24.2"
mypy = "^1.8"
pre-commit = "^3.6"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- Ruff ---
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["engine", "tools", "schemas", "backend", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # Do not perform function call in argument defaults (FastAPI Depends pattern)
    "RUF001",  # ambiguous characters in strings (project uses Russian)
    "RUF002",  # ambiguous characters in docstrings (project uses Russian)
    "RUF003",  # ambiguous characters in comments (project uses Russian)
]

[tool.ruff.lint.per-file-ignores]
"backend/app/models/*.py" = ["TCH003"]  # SQLAlchemy needs runtime type access

[tool.ruff.lint.isort]
known-first-party = ["engine", "tools", "schemas", "backend"]

# --- Black ---
[tool.black]
target-version = ["py311"]
line-length = 120

# --- Mypy ---
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "instructor"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["backend.*"]
disallow_untyped_decorators = false
warn_return_any = false
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_untyped_decorators = false
warn_return_any = false
disallow_any_generics = false
disable_error_code = ["method-assign"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=engine --cov=tools --cov=schemas --cov-report=term-missing --cov-fail-under=90"

# --- Coverage ---
[tool.coverage.run]
source = ["engine", "tools", "schemas"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
